[package]
name = "rovr"
version = "0.1.0"
authors = ["mcc <andi.m.mcclure@gmail.com>"]
edition = "2018"

[features]
safe-lua = []
lovr-modules = []

[build-dependencies]
cfg-if = "1.0.0"
cmake = "0.1"

[dependencies]
cfg-if = "1.0.0"
mlua = {version="0.5.1", features=["luajit", "vendored"]}
winit = "0.24.0"
